--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,29 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+
+    id("androidx.navigation.safeargs.kotlin")
+    id 'kotlin-kapt'
+    id 'kotlin-android-extensions'
+
 }
+
 
 android {
     namespace 'com.example.ulkeler_uygulamasi'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.example.ulkeler_uygulamasi"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+    }
+    dataBinding{
+        enabled  true
     }
 
     buildTypes {
@@ -34,11 +43,47 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    def lifeCycleExtensionVersion = '2.2.0'
+    def retrofitVersion = '2.9.0'
+    def glideVersion = '4.13.2'
+    def rxJavaVersion = '2.1.1'
+    def roomVersion = '2.4.3'
+    def navVersion = '2.5.3'
+    def preferencesVersion = '1.2.0'
+
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.lifecycle:lifecycle-extensions:$lifeCycleExtensionVersion"
+
+    implementation "androidx.room:room-runtime:$roomVersion"
+    implementation "androidx.legacy:legacy-support-v4:1.0.0"
+    kapt "androidx.room:room-compiler:$roomVersion"
+    implementation "androidx.room:room-ktx:$roomVersion"
+
+    implementation"org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$navVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navVersion"
+
+    implementation "com.google.android.material:material:1.7.0"
+
+    implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofitVersion"
+
+    implementation "io.reactivex.rxjava2:rxjava:$rxJavaVersion"
+    implementation "io.reactivex.rxjava2:rxandroid:$rxJavaVersion"
+
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+
+    implementation "androidx.preference:preference:$preferencesVersion"
+
+
 }
+
